--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Улучшение коммуникации и эмпатия
 description: 
 
-baseurl: "" #name of GitHub repository
+baseurl: "https://ivanbeknno.github.io/ivanbeknno" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
 email: #
 
