--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Улучшение коммуникации и эмпатия
-description: 
+description:
 
 baseurl: "https://ivanbeknno.github.io/" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
@@ -20,7 +20,7 @@ paginate_path: /blog/page:num/
 facebook: #
 twitter: #
 linkedin: #
-github: #
+github: "asd" #
 researchgate: #
 orcid: #
 
