--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ compress_html:
 collections:
   projects:
     output: true
-    permalink: /projects/:path/
+    permalink: /cases/:path/
 
 sass:
   sass_dir: /assets/css/_sass
