Изменил описание на сайте, и размер шрифта

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 # git push origin gh-pages
 
-title: Улучшение коммуникации и эмпатия
+title: Улучшение взаимопонимания в командах
 description:
 
 baseurl: "" #name of GitHub repository
