--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 # git push origin gh-pages
 
-title: Улучшение взаимопонимания в командах
+title: Улучшение взаимопонимания и эмпатия
 description:
 
 baseurl: "" #name of GitHub repository
