Добавил url в конфиге

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Улучшение взаимопонимания и эмпатия
 description:
 
 baseurl: "" #name of GitHub repository
-url: "" #custom url to be used instead of GitHub repository
+url: "https://ivanbek.ru" #custom url to be used instead of GitHub repository
 email: #
 repository: ivanbeknno/ivanbeknno.github.io
 
