изменил в конфиге чтобы был месяц в пути к посту в блоге, добавил пермалинки ко всем написанным постам, чтобы они оставались по старым ссылкам, добавил явное указание дат во всех постах. В будущем хочу сделать отображение постов по конкретному месяцу, и возможно, году

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 
 # Pagination
 paginate: 20
-permalink: /blog/:year/:title/
+permalink: /blog/:year/:month/:title/
 paginate_path: /blog/:num/
 
 # Social media links in footer
