установил часовой пояс Москвы в config файл

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ email: #
 repository: ivanbeknno/ivanbeknno.github.io
 
 locale: "ru_RU"
+timezone: Europe/Moscow
 
 highlighter: rouge
 markdown: kramdown
