--- a/.github/workflows/schedule-build.yml
+++ b/.github/workflows/schedule-build.yml
@@ -2,17 +2,29 @@ name: Scheduled Site Build
 
 on:
   schedule:
-    # Запускать каждый день в 16:32 UTC (19:32 MSK)
+    # Запускать в 16:32 UTC (19:32 MSK)
     - cron: '32 16 * * *'
+    # Запускать в 8:32 UTC (11:32 MSK)
+    - cron: '32 8 * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      # Шаг 1: Клонировать репозиторий
       - uses: actions/checkout@v4
         with:
-          ref: gh-pages
+          ref: gh-pages  # Используем ветку gh-pages
+
+      # Шаг 2: Настроить Git-параметры
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      # Шаг 3: Создать пустой коммит с временной меткой
       - name: Trigger rebuild
         run: |
-          git commit --allow-empty -m "Scheduled rebuild trigger"
-          git push
+          git commit --allow-empty -m "Scheduled rebuild trigger at $(date -u)"
+          git push origin gh-pages
