--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,11 @@
+- name: "111 https://forms.gle/v8Vm6wjLfLHUzaLn6"
+  datetime: "01.02.2025 22:37"
+  url: "https://forms.gle/v8Vm6wjLfLHUzaLn6"
+
+- name: "222 https://forms.gle/8GP5rfBruHEkoqWh9"
+  datetime: "03.02.2025 18:35"
+  url: "https://forms.gle/8GP5rfBruHEkoqWh9"
+
 - name: "5 февраля (среда) - https://ivanbek.timepad.ru/event/3190976/"
   datetime: "05.02.2025 19:30"
   url: "https://ivanbek.timepad.ru/event/3190976/"
