--- a/_data/events.yml
+++ b/_data/events.yml
@@ -21,3 +21,19 @@
 - name: "26 февраля (среда) - https://ivanbek.timepad.ru/event/3191493/"
   datetime: "26.02.2025 19:30"
   url: "https://ivanbek.timepad.ru/event/3191493/"
+
+- name: "5 марта (среда) - https://ivanbek.timepad.ru/event/3242517/"
+  datetime: "05.02.2025 19:30"
+  url: "https://ivanbek.timepad.ru/event/3242517/"
+
+- name: "12 марта (среда) - https://ivanbek.timepad.ru/event/3242572/"
+  datetime: "12.02.2025 19:30"
+  url: "https://ivanbek.timepad.ru/event/3242572/"
+
+- name: "19 марта (среда) - https://ivanbek.timepad.ru/event/3242576/"
+  datetime: "19.02.2025 19:30"
+  url: "https://ivanbek.timepad.ru/event/3242576/"
+
+- name: "26 марта (среда) -https://ivanbek.timepad.ru/event/3242577/ "
+  datetime: "26.02.2025 19:30"
+  url: "https://ivanbek.timepad.ru/event/3242577/"
